// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login-form Renders \`login-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <div
    class="flex mt-1"
  >
    <input
      autofocus="autofocus"
      class="v-text-field"
      clearable="clearable"
      color="primary"
      error-messages=""
      label="Username"
      name="username"
      outline="outline"
    />
  </div>
  <div
    class="flex"
  >
    <c-password-field-stub
      clearable="clearable"
      outline="outline"
      required="required"
      value="password"
    />
  </div>
</div>
`;

exports[`login-form Renders \`login-form\` with default props 1`] = `
<div
  class="layout column"
>
  <div
    class="flex mt-1"
  >
    <input
      autofocus="autofocus"
      class="v-text-field"
      clearable="clearable"
      color="primary"
      error-messages=""
      label="Username"
      name="username"
      outline="outline"
    />
  </div>
  <div
    class="flex"
  >
    <c-password-field-stub
      clearable="clearable"
      outline="outline"
      required="required"
    />
  </div>
</div>
`;
